# msca

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
docs/: .buildinfo  Makefile  genindex.html  index.html  index.rst  installation.html  installation.rst  meta.toml  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  installation.rst.txt
docs/_sources/api_reference/: msca.c2fun.rst.txt  msca.optim.rst.txt
docs/_static/: basic.css  jquery-3.5.1.js  jquery.js  searchtools.js  underscore-1.13.1.js  underscore.js
docs/_static/styles/: furo.css  furo.css.map
docs/api_reference/: index.html  msca.c2fun.html  msca.c2fun.rst  msca.collections.rst  msca.linalg.html  msca.linalg.rst  msca.optim.html  msca.optim.prox.html  msca.optim.solver.html  msca.optim.solver.rst
sphinx/: conf.py
sphinx/api_reference/: msca.linalg.rst  msca.optim.prox.rst  msca.optim.solver.rst
src/msca/: typing.py
src/msca/array_interface/: __init__.py  jax.py  main.py  numpy.py  sparse.py
src/msca/c2fun/: __init__.py  jax.py  main.py  numpy.py
src/msca/collections/: __init__.py  unique_seq.py
src/msca/integrate/: cython_utils.pyx  (+1 more)
tests/c2fun/: test_jax.py  test_main.py  test_numpy.py
tests/collections/: test_unique_seq.py
tests/integrate/: test_integration_weights.py
tests/itertools/: test_unique_everseen.py
tests/linalg/: test_matrix.py
tests/metrics/: test_metrics.py
tests/optim/: test_ipsolver.py  test_ntsolver.py
(+25 files in other folders)
