[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "msca"
version = "0.4.0"
description = "Mathematical sciences and computational algorithms"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
]
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "scikit-learn",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[project.urls]
github = "https://github.com/ihmeuw-msca/msca"
